refactor(AttendanceMachine) : now.atTime() 으로 수정